--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "apollo-server-express": "^3.13.0",
+    "class-transform": "^0.7.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "graphql": "^16.11.0",
     "graphql-tools": "^9.0.20",
     "reflect-metadata": "^0.2.2",
